# Unified-Context-Graph

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PRD.md  PRD_ADVANCED_COMPLETENESS.md
src/ucg/: __init__.py  main.py
src/ucg/agents/: __init__.py  models.py  service.py
src/ucg/api/: dependencies.py  router.py
src/ucg/api/routes/: advanced.py  agents.py  capabilities.py  connectors.py  controls.py  evidence.py  graph.py  health.py  identity.py  ingestion.py  llm_firewall.py  policy.py  privacy.py  risk.py  (+2 more)
src/ucg/capabilities/: __init__.py  roadmap.py
src/ucg/connectors/: __init__.py  models.py  service.py
src/ucg/controls/: __init__.py  models.py  service.py
src/ucg/core/: config.py
src/ucg/evidence/: __init__.py  models.py  service.py
src/ucg/graph/: __init__.py  models.py  ontology.py  repository.py
src/ucg/identity/: models.py
src/ucg/ingestion/: __init__.py  models.py  service.py
src/ucg/llm_firewall/: __init__.py  engine.py  models.py
src/ucg/policy/: __init__.py  engine.py  models.py
src/ucg/privacy/: __init__.py  models.py  service.py
src/ucg/risk/: __init__.py  engine.py  models.py
src/ucg/semantic_layer/: __init__.py  models.py  service.py
src/ucg/soc/: __init__.py  models.py
src/ucg/trust_dlp/: __init__.py  engine.py  models.py
src/ucg/trust_slp/: __init__.py  models.py
tests/: test_advanced_foundation_apis.py  test_capability_roadmap.py  test_ingestion_and_graph.py  test_risk_policy_firewall.py  test_roadmap_apis.py
